# Mardi_tech

./: README.md
vision/ai/: Dockerfile.yolo8_trt.bed_detect  Dockerfile.yolov8_trt_jetson_nano  Dockerfile.yolov8_trt_x86  Dockerfile.zed  README.md  build_yolov8_trt_nano.sh  build_yolov8_trt_x86.sh  build_zed.sh  docker-compose.yolov8-trt-jetson-nano.yml  engine_file_build.sh  readme.md  run_yolov8_det_video.sh  sar_entrypoint.bash
vision/ai/YOLOv8-TensorRT-CPP/: CMakeLists.txt  Dockerfile  Dockerfile.jetson  MIGRATION.md
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/: .clang-tidy  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  pyproject.toml
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/.github/actions/setup-trt/: action.yml
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/.github/consumer/: CMakeLists.txt  main.cpp
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/.github/workflows/: ci.yml  format.yml  gpu-tests.yml
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/cmake/: FindTensorRT.cmake  tensorrt_cpp_api-config.cmake.in
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/docs/: install.md  quickstart.md  upgrading_from_v6.md
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/examples/: CMakeLists.txt  README.md  download_models.sh
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/examples/benchmark/: main.cpp
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/examples/classification/: main.cpp
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/examples/common/: image_io.h  stb_impl.cpp
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/examples/detection/: main.cpp
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/examples/python/: README.md  benchmark_parity.py  classify_zerocopy.py
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/examples/segmentation/: main.cpp
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/include/tensorrt_cpp_api/: all.h  allocator.h  calibrator.h  cuda.h  device_tensor.h  dtype.h  engine.h  engine_builder.h  engine_pool.h  layout.h  logger.h  opencv_interop.h  preproc.h  quant.h  shape.h  status.h  tensor.h  version.h
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/python/: CMakeLists.txt
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/python/src/: bindings.cpp  dlpack.h
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/python/tests/: test_bindings.py
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/python/trtcpp/: __init__.py
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/scripts/: install_deps.sh  verify_deps.sh
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/src/: allocator.cpp  calibrator.cpp  core.cpp  cuda.cpp  device_tensor.cpp  engine.cpp  engine_builder.cpp  engine_pool.cpp  logger.cpp  opencv_interop.cpp  preproc.cu
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/src/detail/: buffers.cpp  buffers.h  calibrator_bridge.cpp  calibrator_bridge.h  engine_cache.cpp  engine_cache.h  execution.cpp  execution.h  sha256.cpp  sha256.h  trt_common.cpp  trt_common.h
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/tests/: CMakeLists.txt  test_buffers.cpp  test_calibrator.cpp  test_cuda.cpp  test_device_tensor.cpp  test_dtype.cpp  test_engine.cpp  test_engine_builder.cpp  test_engine_cache.cpp  test_engine_pool.cpp  test_logger.cpp  test_opencv_interop.cpp  test_preproc.cpp  test_sha256.cpp  test_shape.cpp  test_status.cpp  test_tensorview.cpp  test_trt_logger.cpp  test_trt_plugin.cpp  test_version.cpp
vision/ai/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/tests/models/: conv_1x3x8x8.onnx  gen_models.py  relu_1x3x8x8.onnx  relu_dynamic_batch.onnx
vision/ai/YOLOv8-TensorRT-CPP/src/: benchmark.cpp  cmd_line_util.h  object_detection_csi_jetson.cpp  object_detection_image.cpp  object_detection_video_stream.cpp  yolov8.cpp  yolov8.h
vision/ai/YoloV8-TensorRT-Jetson_Nano/: CMakeLists.txt  README.md
vision/ai/YoloV8-TensorRT-Jetson_Nano/src/: main.cpp  yolov8.cpp
vision/ai/yolov8/: CMakeLists.txt  README.md  yolov8_5u_det.cpp  yolov8_cls.cpp  yolov8_det.cpp  yolov8_det_video.cpp  yolov8_obb.cpp  yolov8_pose.cpp  yolov8_seg.cpp
vision/ai/yolov8/weights/: .gitignore
vision/ai/yolov8_trt_bed_detect/: .gitignore  CMakeLists.txt  README.md  function_ex.cpp  gen_wts.py  main.cpp  main_fun.cpp  move_bot.py  package.xml  path_gen.cpp
vision/ai/yolov8_trt_bed_detect/include/: config.h  function_ex.h  path_gen.h  postprocess.h
vision/ai/yolov8_trt_bed_detect/src/: postprocess.cpp
vision/ai/yolov8_trt_bed_detect_opt/: CMakeLists.txt  package.xml
vision/ai/yolov8_trt_bed_detect_opt/include/: logging.h  ros_utils.h  utils.h  yolo.hpp
vision/ai/yolov8_trt_bed_detect_opt/src/: bed_3d_gen.cpp  convex_hull.cpp  gamma_logic.cpp  main.cpp  math_equations.cpp  move_nav2.py  ros_utils.cpp  scan_gen.cpp  tf2_utils.cpp  viz_utils.cpp  way_points.cpp  yolo.cpp  yolov8_bed_trt.yaml
vision/data_logger/: .dockerignore  CMakeLists.txt  Dockerfile.jetson  Dockerfile.x86  README.md  api_server.py  docker-compose.jetson.yml  docker-compose.x86.yml  frame_logger  frame_logger.cpp  main.cpp  run.sh
vision/data_logger/frame_logger/: frame_logger.cpp
vision/data_logger/logs/: .gitignore
vision/data_logger/ui/: index.html
vision/data_logger/video_logger/: video_logger.cpp
