<?xml version="1.0"?>
<package format="3">
  <name>yolov8_trt_bed_detect_opt</name>
  <version>1.0.0</version>
  <description>YOLOv8 TensorRT bed detection with OpenCV camera capture</description>
  <maintainer email="debanikroy92@gmail.com">Meraque</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
